--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 .DS_Store
 .sass-cache
 開発
+
+# Node
+# https://github.com/github/gitignore/blob/master/Node.gitignore
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules
