--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-compass": "~0.2.0"
+    "grunt-contrib-compass": "~0.2.0",
+    "grunt-contrib-jade": "~0.6.0"
   }
 }
