--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-jade": "~0.6.0"
+    "grunt-contrib-jade": "~0.6.0",
+    "grunt-shell": "~0.2.2"
   }
 }
