--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-jade": "~0.6.0",
-    "grunt-shell": "~0.2.2"
+    "grunt-contrib-compass": "~0.3.0",
+    "grunt-contrib-jade": "~0.7.0",
+    "grunt-shell": "~0.3.0",
+    "grunt-coffeelint": "0.0.6",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
