--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-jade": "~0.7.0",
     "grunt-shell": "~0.3.0",
     "grunt-coffeelint": "0.0.6",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-connect": "~0.3.0"
   }
 }
