--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 .sass-cache
 開発
-audio/compressed/*
+#audio/compressed/*
 
 # Node
 # https://github.com/github/gitignore/blob/master/Node.gitignore
