--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "re-a-ct",
-  "version": "0.0.0",
-  "description": "#[re(a)ct - Sound Interaction Expreriment with HTML5 Web Audio API](http://shinnn.github.io/re-a-ct/)",
+  "version": "0.0.1",
+  "description": "Sound Interaction Expreriment with HTML5 Web Audio API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,11 @@
     "type": "git",
     "url": "https://github.com/shinnn/re-a-ct.git"
   },
-  "author": "",
-  "license": "BSD",
+  "author": {
+    "name": "Shinnosuke Watanabe",
+    "url": "https://github.com/shinnn"
+  },
+  "license": "MIT",
   "readmeFilename": "README.md",
   "gitHead": "b65452967c24fe7ab1c4a35bc09f308ae8f5a751",
   "bugs": {
@@ -27,7 +30,7 @@
     "grunt-shell": "~0.3.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-github-pages": "0.0.3",
-    "coffeelint": "~0.5.7"
+    "coffeelint": "~0.5.7",
+    "grunt-gh-pages": "~0.7.5"
   }
 }
