--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
     "url": "https://github.com/shinnn/re-a-ct/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-uglify": "~0.2.6",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.6.0",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-shell": "~0.5.0",
+    "grunt-shell": "~0.6.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-connect": "~0.5.0",
-    "coffeelint": "~0.6.1",
-    "grunt-gh-pages": "~0.8.0"
+    "coffeelint": "~1.0.1",
+    "grunt-gh-pages": "~0.9.0",
+    "load-grunt-tasks": "~0.2.0",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-modernizr": "~0.4.1",
+    "grunt-concurrent": "~0.4.1",
+    "grunt-autoprefixer": "~0.4.0",
+    "lodash-cli": "~2.4.0",
+    "grunt-lodash": "~0.3.0"
   }
 }
