--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "re-a-ct",
   "version": "0.0.1",
   "description": "Sound Interaction Expreriment with HTML5 Web Audio API",
-  "main": "index.js",
+  "main": "Gruntfile.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "https://github.com/shinnn/re-a-ct.git"
   },
+  "private": true,
   "author": {
     "name": "Shinnosuke Watanabe",
     "url": "https://github.com/shinnn"
@@ -27,13 +28,12 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.6.0",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-shell": "~0.6.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-connect": "~0.5.0",
+    "grunt-shell": "~0.6.0",
     "coffeelint": "~1.0.1",
     "grunt-gh-pages": "~0.9.0",
     "load-grunt-tasks": "~0.2.0",
-    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-modernizr": "~0.4.1",
     "grunt-concurrent": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
