--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.6",
+    "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-jade": "~0.9.0",
+    "grunt-contrib-jade": "~0.9.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-connect": "~0.6.0",
-    "grunt-shell": "~0.6.0",
-    "coffeelint": "~1.0.1",
+    "grunt-shell": "~0.6.4",
+    "coffeelint": "~1.0.5",
     "grunt-gh-pages": "~0.9.0",
-    "load-grunt-tasks": "~0.2.0",
+    "load-grunt-tasks": "~0.2.1",
     "grunt-modernizr": "~0.4.1",
     "grunt-concurrent": "~0.4.1",
     "grunt-autoprefixer": "~0.6.3",
-    "lodash-cli": "~2.4.0",
-    "grunt-lodash": "~0.3.0"
+    "lodash-cli": "~2.4.1",
+    "grunt-lodash": "~0.3.0",
+    "uglify-save-license": "~0.2.2"
   }
 }
