--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-jade": "~0.10.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-connect": "^0.7.0",
     "grunt-shell": "~0.6.4",
-    "coffeelint": "~1.0.7",
+    "coffeelint": "^1.1.0",
     "grunt-gh-pages": "~0.9.0",
     "load-grunt-tasks": "~0.3.0",
     "grunt-modernizr": "~0.5.1",
     "grunt-concurrent": "~0.4.1",
-    "grunt-autoprefixer": "~0.6.3",
+    "grunt-autoprefixer": "^0.7.1",
     "lodash-cli": "~2.4.1",
     "grunt-lodash": "~0.3.0",
     "uglify-save-license": "~0.2.2"
