--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-jade": "~0.10.0",
@@ -33,12 +33,12 @@
     "grunt-shell": "~0.6.4",
     "coffeelint": "^1.1.0",
     "grunt-gh-pages": "~0.9.0",
-    "load-grunt-tasks": "~0.3.0",
+    "load-grunt-tasks": "^0.4.0",
     "grunt-modernizr": "~0.5.1",
     "grunt-concurrent": "~0.4.1",
     "grunt-autoprefixer": "^0.7.1",
     "lodash-cli": "~2.4.1",
     "grunt-lodash": "~0.3.0",
-    "uglify-save-license": "~0.2.2"
+    "uglify-save-license": "^0.3.0"
   }
 }
