--- a/package.json
+++ b/package.json
@@ -22,23 +22,25 @@
     "url": "https://github.com/shinnn/re-a-ct/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt": "~0.4.4",
+    "grunt-contrib-watch": "^0.6.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-jade": "~0.10.0",
+    "grunt-contrib-jade": "^0.11.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-connect": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.9.0",
     "grunt-shell": "~0.6.4",
-    "coffeelint": "^1.1.0",
     "grunt-gh-pages": "~0.9.0",
-    "load-grunt-tasks": "^0.4.0",
     "grunt-modernizr": "~0.5.1",
-    "grunt-concurrent": "~0.4.1",
-    "grunt-autoprefixer": "^0.7.1",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-autoprefixer": "^0.7.2",
+    "grunt-bower-task": "^0.3.4",
+    "load-grunt-tasks": "^0.4.0",
+    "coffeelint": "^1.1.0",
     "lodash-cli": "~2.4.1",
     "grunt-lodash": "~0.3.0",
-    "uglify-save-license": "^0.3.0"
+    "uglify-save-license": "^0.4.0"
   }
 }
