--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "re-a-ct",
   "version": "0.0.1",
   "description": "Sound Interaction Expreriment with HTML5 Web Audio API",
-  "main": "Gruntfile.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,14 +21,14 @@
     "url": "https://github.com/shinnn/re-a-ct/issues"
   },
   "devDependencies": {
-    "coffeelint": "^1.2.0",
+    "coffeelint": "^1.3.0",
     "grunt": "~0.4.4",
     "grunt-autoprefixer": "^0.7.2",
     "grunt-bower-task": "^0.3.4",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.0",
+    "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-jade": "^0.11.0",
@@ -38,7 +37,7 @@
     "grunt-gh-pages": "^0.9.1",
     "grunt-lodash": "~0.3.0",
     "grunt-modernizr": "^0.5.2",
-    "grunt-shell": "~0.6.4",
+    "grunt-shell": "^0.7.0",
     "load-grunt-tasks": "^0.4.0",
     "lodash-cli": "~2.4.1",
     "uglify-save-license": "^0.4.0"
