--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
   },
   "license": "MIT",
   "readmeFilename": "README.md",
-  "gitHead": "b65452967c24fe7ab1c4a35bc09f308ae8f5a751",
   "bugs": {
     "url": "https://github.com/shinnn/re-a-ct/issues"
   },
   "devDependencies": {
-    "coffeelint": "^1.3.0",
-    "grunt": "~0.4.4",
-    "grunt-autoprefixer": "^0.7.2",
+    "coffeelint": "^1.5.2",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^0.7.5",
     "grunt-bower-task": "^0.3.4",
     "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
+    "grunt-contrib-compass": "^0.8.0",
     "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-jade": "^0.12.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.9.1",
     "grunt-lodash": "~0.3.0",
     "grunt-modernizr": "^0.5.2",
     "grunt-shell": "^0.7.0",
-    "load-grunt-tasks": "^0.4.0",
+    "load-grunt-tasks": "^0.5.0",
     "lodash-cli": "~2.4.1",
-    "uglify-save-license": "^0.4.0"
+    "uglify-save-license": "^0.4.1"
   }
 }
