--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "devDependencies": {
     "coffeelint": "^1.5.2",
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.5",
+    "grunt-autoprefixer": "^0.8.0",
     "grunt-bower-task": "^0.3.4",
     "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-compass": "^0.8.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compass": "^0.9.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -38,7 +39,7 @@
     "grunt-lodash": "~0.3.0",
     "grunt-modernizr": "^0.5.2",
     "grunt-shell": "^0.7.0",
-    "load-grunt-tasks": "^0.5.0",
+    "load-grunt-tasks": "^0.6.0",
     "lodash-cli": "~2.4.1",
     "uglify-save-license": "^0.4.1"
   }
