--- a/package.json
+++ b/package.json
@@ -20,29 +20,29 @@
     "url": "https://github.com/shinnn/re-a-ct/issues"
   },
   "devDependencies": {
-    "coffeelint": "^1.5.2",
+    "coffeelint": "^1.6.0",
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.8.2",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.9.0",
-    "grunt-contrib-concat": "^0.4.0",
+    "grunt-autoprefixer": "^1.0.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-jade": "^0.12.0",
+    "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-es6-transpiler": "^0.1.0",
+    "grunt-es6-transpiler": "^1.0.1",
     "grunt-gh-pages": "^0.9.1",
-    "grunt-lodash": "~0.3.0",
-    "grunt-modernizr": "^0.5.2",
-    "grunt-shell": "^0.7.0",
-    "grunt-usemin": "^2.3.0",
-    "grunt-wiredep": "^1.8.0",
-    "jit-grunt": "^0.7.0",
-    "lodash-cli": "~2.4.2",
+    "grunt-lodash": "^0.3.0",
+    "grunt-modernizr": "^0.6.0",
+    "grunt-shell": "^1.1.1",
+    "grunt-usemin": "^2.4.0",
+    "grunt-wiredep": "^1.9.0",
+    "jit-grunt": "^0.8.0",
+    "lodash-cli": "^2.4.2",
     "uglify-save-license": "^0.4.1"
   }
 }
