--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Sound Interaction Expreriment with HTML5 Web Audio API",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt"
   },
   "repository": {
     "type": "git",
@@ -15,34 +15,30 @@
     "url": "https://github.com/shinnn"
   },
   "license": "MIT",
-  "readmeFilename": "README.md",
-  "bugs": {
-    "url": "https://github.com/shinnn/re-a-ct/issues"
-  },
   "devDependencies": {
     "coffeelint": "^1.8.1",
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.0.0",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-jade": "^0.14.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.12.0",
+    "grunt-contrib-jade": "^0.14.1",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-es6-transpiler": "^1.0.1",
     "grunt-gh-pages": "^0.9.1",
-    "grunt-lodash": "^0.3.0",
+    "grunt-lodash": "^0.4.0",
     "grunt-modernizr": "^0.6.0",
     "grunt-shell": "^1.1.1",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jit-grunt": "^0.9.0",
-    "lodash-cli": "^2.4.2",
+    "jit-grunt": "^0.9.1",
+    "lodash-cli": "^3.1.1",
     "uglify-save-license": "^0.4.1"
   }
 }
